<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivityParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="80dp"
    android:background="@drawable/lighthouse_wallpaper"
    tools:context="com.example.vinamra.anganwadi_helpers.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_by_entering_the_information_below"
        android:textSize="@dimen/subHeadingSize"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/translucent_black_background">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/userIdLoginTxtBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_iconLeft="@drawable/ic_account_circle_black_24dp"
            app:met_iconPadding="4dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@_1234567890"
            android:inputType="textFilter"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            app:met_floatingLabelText="@string/userID"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/white"
            android:textColor="@color/white"
            android:hint="@string/enter_userID"
            app:met_textColorHint="@color/white"
            app:met_clearButton="true"
            app:met_baseColor="@color/white"
            app:met_errorColor="@color/red_error"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordLoginTxtBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_iconLeft="@drawable/ic_lock_black_24dp"
            app:met_iconPadding="4dp"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@$_#1234567890"
            android:inputType="textFilter"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            app:met_floatingLabelText="@string/password"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/white"
            android:textColor="@color/white"
            android:hint="@string/enter_password"
            app:met_textColorHint="@color/white"
            app:met_clearButton="true"
            app:met_baseColor="@color/white"
            app:met_errorColor="@color/red_error"/>

    </LinearLayout>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/helperBtnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/sign_in"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="#fff"
        android:backgroundTint="@color/orange" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a_new_helper"
        android:textSize="@dimen/subHeadingSize"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/helperBtnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/register"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="#fff"
        />

</LinearLayout>