<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/deliveryPersonNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
        android:gravity="center"
        android:hint="@string/enter_delivery_person_name"
        android:inputType="textFilter"
        android:textSize="@dimen/editTextContentSize"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/delivery_person_name" />


    <TextView
        android:id="@+id/deliveryPersonSignatureCheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_person_signature"
        android:layout_margin="10dp"
        android:drawablePadding="15dp"/>

    <TextView
        android:id="@+id/helperSignatureCheckedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helper_signature"
        android:layout_margin="10dp"
        android:drawablePadding="15dp"/>

    <Button
        android:id="@+id/openSignatureActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_person_signature"
        android:textSize="@dimen/buttonTextSize" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/doneSignatureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="#fff"
        android:visibility="invisible"
        android:clickable="false"/>

</LinearLayout>