<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/change_password"
                android:textSize="22sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="22dp"
                android:text="@string/you_used_a_temporary_password"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/provide_a_new_password"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="10dp"
                android:orientation="vertical">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/helperNewPwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editTextContentSize"
                    app:met_floatingLabel="highlight"
                    app:met_helperText="@string/password_length_should"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@$_#1234567890"
                    android:inputType="textFilter"
                    app:met_floatingLabelText="@string/new_password"
                    android:hint="@string/give_a_new_password"
                    app:met_iconLeft="@drawable/ic_lock_black_24dp"
                    app:met_iconPadding="4dp"
                    android:paddingBottom="10dp"
                    app:met_clearButton="true"
                    app:met_maxCharacters="30"
                    android:maxLength="30"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/helperNewPwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/editTextContentSize"
                    app:met_floatingLabel="highlight"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@$_1234567890"
                    android:inputType="textFilter"
                    app:met_iconLeft="@drawable/ic_lock_black_24dp"
                    app:met_iconPadding="4dp"
                    android:paddingBottom="10dp"
                    app:met_floatingLabelText="@string/confirm_your_Password"
                    android:hint="@string/lets_confirm_your_Password"
                    app:met_clearButton="true"
                    app:met_maxCharacters="30"
                    android:maxLength="30"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:drawableTop="@drawable/ic_info_outline_black_24dp"
                android:textColor="#000"
                android:alpha="0.3"
                android:text="@string/password_must_contain"
                android:textSize="13sp"/>

            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/chngHelperPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="16sp"
                android:textColor="#fff"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>