<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/date"
                android:textSize="@dimen/editTextContentSize" />

            <EditText
                android:id="@+id/menuDateEditText"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:inputType="number"
                android:gravity="center"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/editTextContentSize" />

            <EditText
                android:id="@+id/menuTimeEditText"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:inputType="number"
                android:gravity="center"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/editTextContentSize" />

            <EditText
                android:id="@+id/mealEditText"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:inputType="number"
                android:gravity="center"
                android:focusable="false"/>

        </LinearLayout>



    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/todaysMenuEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:met_floatingLabelText="@string/todays_menu"
        app:met_floatingLabel="highlight"
        android:hint="@string/enter_todays_menu"
        app:met_clearButton="true"
        android:inputType="textMultiLine|textFilter"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz, " />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/savemenuproceedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/proceed"
        android:textColor="#ffffff" />


</LinearLayout>