<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/billNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="highlight"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="textFilter"
            app:met_floatingLabelText="@string/bill_number"
            android:hint="@string/enter_bill_number"
            app:met_clearButton="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textSize="@dimen/editTextContentSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/upload_bill_photo"
        android:textSize="30sp"/>

    <ImageButton
        android:id="@+id/uploadStockBillBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/camera_icon" />

    <com.dmallcott.dismissibleimageview.DismissibleImageView
        android:id="@+id/stockBillImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="invisible"/>

</LinearLayout>